--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
-    <form [formGroup]="recipeForm">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+          <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
         </div>
       </div>
       <div class="row">
@@ -51,22 +51,19 @@
       </div>
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
-          <div class="row">
-<!--               style="margin-top: 10px;"-->
-<!--               *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"-->
+          <div class="row"
+               style="margin-top: 10px;">
+<!--               *ngFor = "let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"-->
 <!--               [formGroupName]="i"-->
-
               <div class="col-xs-8">
                 <input type="text"
                        class="form-control"
-                       formControlName="name"
-                  >
+                       formControlName="name">
               </div>
             <div class="col-xs-2">
               <input type="number"
                      class="form-control"
-                     formControlName="amount"
-              >
+                     formControlName="amount">
             </div>
             <div class="col-xs-2">
               <button class="btn btn-danger">X</button>
@@ -74,7 +71,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12">
-              <button class="btn btn-success">Add Ingredients</button>
+              <button class="btn btn-success" (click)="onAddIngredient()">Add Ingredients</button>
             </div>
           </div>
         </div>
