--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -27,13 +27,14 @@
             id="imagePath"
             formControlName="imagePath"
             class="form-control"
+                   #imagePath
             >
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" class="img-responsive">
+          <img [src]="imagePath.value" class="img-responsive">
         </div>
       </div>
       <div class="row">
@@ -53,7 +54,7 @@
         <div class="col-xs-12" formArrayName="ingredients">
           <div class="row"
                style="margin-top: 10px;">
-<!--               *ngFor = "let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"-->
+<!--               *ngFor= "let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"-->
 <!--               [formGroupName]="i"-->
               <div class="col-xs-8">
                 <input type="text"
@@ -66,7 +67,7 @@
                      formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button class="btn btn-danger">X</button><!-- Due to the above controls error this button also not working (click)="onDeleteIngredient(i)" -->
             </div>
           </div>
           <div class="row">
